# stb_cli_bw_converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
